@@ -1,3 +1,12 @@
+2008-05-29  Tomas Frydrych  <tf@o-hand.com>
+
+	* src/Makefile.am:
+	* src/hd-home.c:
+	* src/hd-home.h:
+	* src/hd-home-view.c:
+	* src/hd-home-view.h:
+	Added HdHomeView object to represent a single home view.
+	
 2008-05-28  Tomas Frydrych  <tf@o-hand.com>
 
 	* src/hd-comp-mgr.c:
